// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Avatar /> should render the Avatar component with custom content 1`] = `
.c3 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #292929;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 80px;
  min-height: 80px;
  width: 80px;
  min-width: 80px;
  border-radius: 50%;
  background: #BAC6D9;
  color: #0D2A58;
  font-family: Inter,sans-serif;
  font-size: 19px;
}

.c0 > svg {
  fill: #0D2A58;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: calc(0.3 * 80px);
  position: absolute;
  background: #292929;
  opacity: 0.85;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2 svg {
  fill: #FFFFFF;
  width: 16px;
  height: 16px;
}

.c1 {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  overflow: hidden;
  border-radius: 50%;
}

<div
  className="c0"
  data-id="mockedTestId"
  data-test-id="mockedTestId"
  size="2xlarge"
>
  some custom content, can be anything react can render
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
      size="2xlarge"
    >
      <svg
        className="c3"
        color={null}
        disabled={false}
        role="presentation"
        selected={false}
        size={null}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            clipRule="evenodd"
            d="M15.75 13.5c0 2.0711-1.6789 3.75-3.75 3.75-2.071 0-3.75-1.6789-3.75-3.75S9.929 9.75 12 9.75c2.0711 0 3.75 1.6789 3.75 3.75Zm-1.5 0c0 1.2426-1.0074 2.25-2.25 2.25s-2.25-1.0074-2.25-2.25 1.0074-2.25 2.25-2.25 2.25 1.0074 2.25 2.25Z"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M7.9146 4.9938 7.0365 6.75H4.5c-1.6568 0-3 1.3431-3 3v7.5c0 1.6569 1.3432 3 3 3h15c1.6569 0 3-1.3431 3-3v-7.5c0-1.6569-1.3431-3-3-3h-2.5365l-.8781-1.7562A2.25 2.25 0 0 0 14.0729 3.75H9.927a2.25 2.25 0 0 0-2.0124 1.2438ZM9.927 5.25a.75.75 0 0 0-.6708.4146L8.7135 6.75h6.573l-.5427-1.0854a.7502.7502 0 0 0-.6709-.4146H9.927Zm-2.412 3a.7442.7442 0 0 1-.0313 0H4.5c-.8284 0-1.5.6716-1.5 1.5v7.5c0 .8284.6716 1.5 1.5 1.5h15c.8284 0 1.5-.6716 1.5-1.5v-7.5c0-.8284-.6716-1.5-1.5-1.5h-2.9838a.7423.7423 0 0 1-.0313 0H7.5151Z"
            fillRule="evenodd"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render the Avatar component with edit overlay 1`] = `
.c3 {
  height: 24px;
  width: 24px;
  min-height: 24px;
  min-width: 24px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #292929;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 80px;
  min-height: 80px;
  width: 80px;
  min-width: 80px;
  border-radius: 50%;
  background: #BAC6D9;
  color: #0D2A58;
  font-family: Inter,sans-serif;
  font-size: 19px;
}

.c0 > svg {
  fill: #0D2A58;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: calc(0.3 * 80px);
  position: absolute;
  background: #292929;
  opacity: 0.85;
  left: 0;
  right: 0;
  bottom: 0;
}

.c2 svg {
  fill: #FFFFFF;
  width: 16px;
  height: 16px;
}

.c1 {
  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  overflow: hidden;
  border-radius: 50%;
}

<div
  className="c0"
  data-id="mockedTestId"
  data-test-id="mockedTestId"
  size="2xlarge"
>
  MN
  <div
    className="c1"
  >
    <div
      className="c2"
      onClick={[Function]}
      size="2xlarge"
    >
      <svg
        className="c3"
        color={null}
        disabled={false}
        role="presentation"
        selected={false}
        size={null}
        viewBox="0 0 24 24"
      >
        <g>
          <path
            clipRule="evenodd"
            d="M15.75 13.5c0 2.0711-1.6789 3.75-3.75 3.75-2.071 0-3.75-1.6789-3.75-3.75S9.929 9.75 12 9.75c2.0711 0 3.75 1.6789 3.75 3.75Zm-1.5 0c0 1.2426-1.0074 2.25-2.25 2.25s-2.25-1.0074-2.25-2.25 1.0074-2.25 2.25-2.25 2.25 1.0074 2.25 2.25Z"
            fillRule="evenodd"
          />
          <path
            clipRule="evenodd"
            d="M7.9146 4.9938 7.0365 6.75H4.5c-1.6568 0-3 1.3431-3 3v7.5c0 1.6569 1.3432 3 3 3h15c1.6569 0 3-1.3431 3-3v-7.5c0-1.6569-1.3431-3-3-3h-2.5365l-.8781-1.7562A2.25 2.25 0 0 0 14.0729 3.75H9.927a2.25 2.25 0 0 0-2.0124 1.2438ZM9.927 5.25a.75.75 0 0 0-.6708.4146L8.7135 6.75h6.573l-.5427-1.0854a.7502.7502 0 0 0-.6709-.4146H9.927Zm-2.412 3a.7442.7442 0 0 1-.0313 0H4.5c-.8284 0-1.5.6716-1.5 1.5v7.5c0 .8284.6716 1.5 1.5 1.5h15c.8284 0 1.5-.6716 1.5-1.5v-7.5c0-.8284-.6716-1.5-1.5-1.5h-2.9838a.7423.7423 0 0 1-.0313 0H7.5151Z"
            fillRule="evenodd"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`<Avatar /> should render the Avatar component with group placeholder 1`] = `
.c1 {
  height: 32px;
  width: 32px;
  min-height: 32px;
  min-width: 32px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #292929;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  min-height: 48px;
  width: 48px;
  min-width: 48px;
  border-radius: 50%;
  background: #BAC6D9;
  color: #0D2A58;
  font-family: Inter,sans-serif;
  font-size: 1rem;
}

.c0 > svg {
  fill: #0D2A58;
}

<div
  className="c0"
  data-id="mockedTestId"
  data-test-id="mockedTestId"
  size="medium"
>
  <svg
    aria-hidden="true"
    className="c1"
    color={null}
    disabled={false}
    role="presentation"
    selected={false}
    size={32}
    viewBox="0 0 24 24"
  >
    <g>
      <path
        clipRule="evenodd"
        d="M16.5 9c2.0711 0 3.75-1.679 3.75-3.75 0-2.071-1.6789-3.75-3.75-3.75s-3.75 1.679-3.75 3.75C12.75 7.321 14.4289 9 16.5 9Zm0-1.5c1.2426 0 2.25-1.0074 2.25-2.25S17.7426 3 16.5 3s-2.25 1.0074-2.25 2.25S15.2574 7.5 16.5 7.5Z"
        fillRule="evenodd"
      />
      <path
        d="M16.5 18c3.3137 0 6-1.6789 6-3.75s-2.6863-3.75-6-3.75c-1.4189 0-2.7228.3078-3.75.8225v1.7567a3.8308 3.8308 0 0 1 .3024-.2089C13.8643 12.3629 15.0793 12 16.5 12s2.6357.3629 3.4476.8703C20.7807 13.391 21 13.9183 21 14.25c0 .3317-.2193.859-1.0524 1.3797-.8119.5074-2.0269.8703-3.4476.8703a8.1209 8.1209 0 0 1-.75-.0344v1.5054c.2457.0191.496.029.75.029Z"
      />
      <path
        clipRule="evenodd"
        d="M7.5 13.5c2.071 0 3.75-1.6789 3.75-3.75C11.25 7.679 9.571 6 7.5 6 5.429 6 3.75 7.679 3.75 9.75c0 2.0711 1.679 3.75 3.75 3.75Zm0-1.5c1.2426 0 2.25-1.0074 2.25-2.25S8.7426 7.5 7.5 7.5 5.25 8.5074 5.25 9.75 6.2574 12 7.5 12ZM7.5 22.5c3.3137 0 6-1.6789 6-3.75S10.8137 15 7.5 15s-6 1.6789-6 3.75 2.6863 3.75 6 3.75Zm3.4476-2.3703C11.7807 19.609 12 19.0817 12 18.75c0-.3317-.2193-.859-1.0524-1.3797C10.1357 16.8629 8.9207 16.5 7.5 16.5s-2.6357.3629-3.4476.8703C3.2193 17.891 3 18.4183 3 18.75c0 .3317.2193.859 1.0524 1.3797C4.8643 20.6371 6.0793 21 7.5 21s2.6357-.3629 3.4476-.8703Z"
        fillRule="evenodd"
      />
    </g>
  </svg>
</div>
`;

exports[`<Avatar /> should render the Avatar component with image 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  min-height: 48px;
  width: 48px;
  min-width: 48px;
  border-radius: 50%;
  background: #BAC6D9;
  color: #0D2A58;
  font-family: Inter,sans-serif;
  font-size: 1rem;
}

.c0 > svg {
  fill: #0D2A58;
}

.c1 {
  width: 48px;
  height: 48px;
  border-radius: 50%;
  object-fit: cover;
  position: absolute;
  z-index: 1;
  opacity: 0;
}

<div
  className="c0"
  data-id="mockedTestId"
  data-test-id="mockedTestId"
  size="medium"
>
  MN
  <img
    alt="mocked name"
    className="c1"
    data-id="mockedTestId_IMAGE"
    data-test-id="mockedTestId_IMAGE"
    onLoad={[Function]}
    opacity={0}
    size="medium"
    src="https://www.8x8.com/wp-content/uploads/2015/06/8x8-referral-rewards-logo.png"
  />
</div>
`;

exports[`<Avatar /> should render the Avatar component with initials 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  min-height: 48px;
  width: 48px;
  min-width: 48px;
  border-radius: 50%;
  background: #BAC6D9;
  color: #0D2A58;
  font-family: Inter,sans-serif;
  font-size: 1rem;
}

.c0 > svg {
  fill: #0D2A58;
}

<div
  className="c0"
  data-id="mockedTestId"
  data-test-id="mockedTestId"
  size="medium"
>
  MN
</div>
`;

exports[`<Avatar /> should render the Avatar component with placeholder 1`] = `
.c1 {
  height: 32px;
  width: 32px;
  min-height: 32px;
  min-width: 32px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #292929;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  min-height: 48px;
  width: 48px;
  min-width: 48px;
  border-radius: 50%;
  background: #BAC6D9;
  color: #0D2A58;
  font-family: Inter,sans-serif;
  font-size: 1rem;
}

.c0 > svg {
  fill: #0D2A58;
}

<div
  className="c0"
  data-id="mockedTestId"
  data-test-id="mockedTestId"
  size="medium"
>
  <svg
    aria-hidden="true"
    className="c1"
    color={null}
    disabled={false}
    role="presentation"
    selected={false}
    size={32}
    viewBox="0 0 24 24"
  >
    <g>
      <path
        clipRule="evenodd"
        d="M16.5 6.75c0 2.4853-2.0147 4.5-4.5 4.5s-4.5-2.0147-4.5-4.5 2.0147-4.5 4.5-4.5 4.5 2.0147 4.5 4.5Zm-1.5 0c0 1.6569-1.3431 3-3 3s-3-1.3431-3-3 1.3431-3 3-3 3 1.3431 3 3ZM19.5 17.25c0 2.4853-3.3579 4.5-7.5 4.5s-7.5-2.0147-7.5-4.5 3.3579-4.5 7.5-4.5 7.5 2.0147 7.5 4.5Zm-1.5 0c0 .5088-.3515 1.2256-1.4684 1.8957C15.4445 19.798 13.8459 20.25 12 20.25c-1.8459 0-3.4445-.452-4.5316-1.1043C6.3515 18.4756 6 17.7588 6 17.25c0-.5088.3515-1.2256 1.4684-1.8957C8.5554 14.702 10.1541 14.25 12 14.25c1.8459 0 3.4445.452 4.5316 1.1043C17.6485 16.0244 18 16.7412 18 17.25Z"
        fillRule="evenodd"
      />
    </g>
  </svg>
</div>
`;

exports[`<Avatar /> should render the Avatar component with user status 1`] = `
.c3 {
  display: block;
}

.c2 {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 12px;
  width: 12px;
  min-width: 12px;
  min-height: 12px;
}

.c2 .presence-border {
  fill: #FFF;
}

.c2 .presence-background {
  fill: #189B55;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  min-height: 48px;
  width: 48px;
  min-width: 48px;
  border-radius: 50%;
  background: #BAC6D9;
  color: #0D2A58;
  font-family: Inter,sans-serif;
  font-size: 1rem;
}

.c0 > svg {
  fill: #0D2A58;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: absolute;
  pointer-events: none;
  right: 0;
  bottom: 0;
  z-index: 3;
}

<div
  className="c0"
  data-id="mockedTestId"
  data-test-id="mockedTestId"
  size="medium"
>
  MN
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <svg
        aria-hidden="true"
        className="c3"
        fill="none"
        viewBox="0 0 14 14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <circle
            className="presence-border"
            cx="7"
            cy="7"
            fill="white"
            r="7"
          />
          <circle
            className="presence-background"
            cx="7"
            cy="7"
            fill="#189B55"
            r="5"
          />
          <path
            clipRule="evenodd"
            d="M10.0303 4.96967C10.3232 5.26256 10.3232 5.73744 10.0303 6.03033L6.53033 9.53033C6.38968 9.67098 6.19891 9.75 6 9.75C5.80109 9.75 5.61032 9.67098 5.46967 9.53033L3.96967 8.03033C3.67678 7.73744 3.67678 7.26256 3.96967 6.96967C4.26256 6.67678 4.73744 6.67678 5.03033 6.96967L6 7.93934L8.96967 4.96967C9.26256 4.67678 9.73744 4.67678 10.0303 4.96967Z"
            fill="white"
            fillRule="evenodd"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Avatar with Novo theme should render the Avatar component with Novo group icon 1`] = `
.c1 {
  height: 32px;
  width: 32px;
  min-height: 32px;
  min-width: 32px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #292929;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  min-height: 48px;
  width: 48px;
  min-width: 48px;
  border-radius: 50%;
  background: #BAC6D9;
  color: #0D2A58;
  font-family: Inter,sans-serif;
  font-size: 1rem;
}

.c0 > svg {
  fill: #0D2A58;
}

<div
  className="c0"
  data-id="AVATAR"
  data-test-id="AVATAR"
  size="medium"
>
  <svg
    aria-hidden="true"
    className="c1"
    color={null}
    disabled={false}
    role="presentation"
    selected={false}
    size={32}
    viewBox="0 0 24 24"
  >
    <g>
      <path
        clipRule="evenodd"
        d="M16.5 9c2.0711 0 3.75-1.679 3.75-3.75 0-2.071-1.6789-3.75-3.75-3.75s-3.75 1.679-3.75 3.75C12.75 7.321 14.4289 9 16.5 9Zm0-1.5c1.2426 0 2.25-1.0074 2.25-2.25S17.7426 3 16.5 3s-2.25 1.0074-2.25 2.25S15.2574 7.5 16.5 7.5Z"
        fillRule="evenodd"
      />
      <path
        d="M16.5 18c3.3137 0 6-1.6789 6-3.75s-2.6863-3.75-6-3.75c-1.4189 0-2.7228.3078-3.75.8225v1.7567a3.8308 3.8308 0 0 1 .3024-.2089C13.8643 12.3629 15.0793 12 16.5 12s2.6357.3629 3.4476.8703C20.7807 13.391 21 13.9183 21 14.25c0 .3317-.2193.859-1.0524 1.3797-.8119.5074-2.0269.8703-3.4476.8703a8.1209 8.1209 0 0 1-.75-.0344v1.5054c.2457.0191.496.029.75.029Z"
      />
      <path
        clipRule="evenodd"
        d="M7.5 13.5c2.071 0 3.75-1.6789 3.75-3.75C11.25 7.679 9.571 6 7.5 6 5.429 6 3.75 7.679 3.75 9.75c0 2.0711 1.679 3.75 3.75 3.75Zm0-1.5c1.2426 0 2.25-1.0074 2.25-2.25S8.7426 7.5 7.5 7.5 5.25 8.5074 5.25 9.75 6.2574 12 7.5 12ZM7.5 22.5c3.3137 0 6-1.6789 6-3.75S10.8137 15 7.5 15s-6 1.6789-6 3.75 2.6863 3.75 6 3.75Zm3.4476-2.3703C11.7807 19.609 12 19.0817 12 18.75c0-.3317-.2193-.859-1.0524-1.3797C10.1357 16.8629 8.9207 16.5 7.5 16.5s-2.6357.3629-3.4476.8703C3.2193 17.891 3 18.4183 3 18.75c0 .3317.2193.859 1.0524 1.3797C4.8643 20.6371 6.0793 21 7.5 21s2.6357-.3629 3.4476-.8703Z"
        fillRule="evenodd"
      />
    </g>
  </svg>
</div>
`;

exports[`Avatar with Novo theme should render the Avatar component with Novo user icon 1`] = `
.c1 {
  height: 32px;
  width: 32px;
  min-height: 32px;
  min-width: 32px;
  -webkit-user-select: auto;
  -moz-user-select: auto;
  -ms-user-select: auto;
  user-select: auto;
  pointer-events: auto;
  fill: #292929;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  height: 48px;
  min-height: 48px;
  width: 48px;
  min-width: 48px;
  border-radius: 50%;
  background: #BAC6D9;
  color: #0D2A58;
  font-family: Inter,sans-serif;
  font-size: 1rem;
}

.c0 > svg {
  fill: #0D2A58;
}

<div
  className="c0"
  data-id="AVATAR"
  data-test-id="AVATAR"
  size="medium"
>
  <svg
    aria-hidden="true"
    className="c1"
    color={null}
    disabled={false}
    role="presentation"
    selected={false}
    size={32}
    viewBox="0 0 24 24"
  >
    <g>
      <path
        clipRule="evenodd"
        d="M16.5 6.75c0 2.4853-2.0147 4.5-4.5 4.5s-4.5-2.0147-4.5-4.5 2.0147-4.5 4.5-4.5 4.5 2.0147 4.5 4.5Zm-1.5 0c0 1.6569-1.3431 3-3 3s-3-1.3431-3-3 1.3431-3 3-3 3 1.3431 3 3ZM19.5 17.25c0 2.4853-3.3579 4.5-7.5 4.5s-7.5-2.0147-7.5-4.5 3.3579-4.5 7.5-4.5 7.5 2.0147 7.5 4.5Zm-1.5 0c0 .5088-.3515 1.2256-1.4684 1.8957C15.4445 19.798 13.8459 20.25 12 20.25c-1.8459 0-3.4445-.452-4.5316-1.1043C6.3515 18.4756 6 17.7588 6 17.25c0-.5088.3515-1.2256 1.4684-1.8957C8.5554 14.702 10.1541 14.25 12 14.25c1.8459 0 3.4445.452 4.5316 1.1043C17.6485 16.0244 18 16.7412 18 17.25Z"
        fillRule="evenodd"
      />
    </g>
  </svg>
</div>
`;
